@startuml
'skinparam monochrome true
'skinparam shadowing false

title UC013 - Register vaccination center

class Administrator {
    +CC_ADMIN String[PK]
    +Username: String
    +Password: String
}

class VaccinationCenter {
    +ID_VACC: Int [PK]
    +Name: String
    +Location: String
    +ContactInformation: String
    +OperatingHours: String
}

class Pandemic{
    +ID_Pandemic: Int [PK]
    +Name_Pandemic: String
}
' Relationships
Administrator "*" -- "*" Pandemic : registers because >
Pandemic "1" -- "*" VaccinationCenter : causes >

@enduml
